plugins {
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

group 'org.vladkanash'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

repositories {
    mavenCentral()
    maven {
        url "https://repo.spring.io/plugins-release/"
    }
}

dependencies {
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    implementation group: 'org.apache.velocity', name: 'velocity', version: '1.7'
    implementation group: 'gui.ava', name: 'html2image', version: '2.0.1'
    implementation group: 'com.slack.api', name: 'bolt-jetty', version: '1.0.10'
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
    implementation group: 'com.google.dagger', name: 'dagger', version: '2.28'

    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.3.3'
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"

    annotationProcessor 'com.google.dagger:dagger-compiler:2.28'
}

sourceSets.main.java.srcDirs = ['build/generated/sources/annotationProcessor/java/main', 'src/main/java']

application {
    mainClassName = 'org.vladkanash.Main'
}

run {
    // gradle run -DslackLogLevel=debug
    systemProperty "org.slf4j.simpleLogger.log.com.slack.api", System.getProperty("slackLogLevel")
}

test {
    useJUnitPlatform()
}
